--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,21 @@
-[tool.poetry]
+[project]
 name = "jsonformer"
-version = "0.12.0"
+version = "0.13.0"
 description = ""
-authors = ["1rgs <rgsduke@gmail.com>"]
 readme = "README.md"
+authors = [{ name = "Rahul Sengottuvelu", email = "rgsduke@gmail.com" }]
+requires-python = ">=3.8"
+dependencies = [
+    "accelerate>=1.0.1",
+    "anthropic>=0.49.0",
+    "pydantic>=2.10.6",
+    "termcolor>=2.4.0",
+    "torch>=2.5.1",
+    # "bitsandbytes",
+    "transformers>=4.46.3",
+]
 
-[tool.poetry.dependencies]
-python = "^3.8"
-termcolor = "^2.3.0"
-
-[tool.poetry.group.dev.dependencies]
-ipykernel = "^6.22.0"
-torch = "^2.0.0"
-accelerate = "^0.18.0"
-bitsandbytes = "^0.38.1"
-transformers = "^4.27.4"
-
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
-
-[virtualenvs]
-create = true
-in-project = true
+[dependency-groups]
+dev = [
+    "ipykernel>=6.29.5",
+]
